climbear-gateway/k8s/overlays/prod/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: climbear-route
  namespace: climbear
spec:
  parentRefs:
    - name: web-gateway
      namespace: gateway
      sectionName: http-climbear
    - name: web-gateway
      namespace: gateway
      sectionName: https-climbear
  hostnames:
    - climbear.sonhs.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: climbear-gateway-service
          port: 80
